diesel_compile_tests/tests/ui/embed_and_serialize_as_cannot_be_mixed.stderr
error: `#[diesel(embed)]` cannot be combined with `#[diesel(serialize_as)]`
  --> $DIR/embed_and_serialize_as_cannot_be_mixed.rs:22:7
   |
22 |     #[diesel(embed, serialize_as = "SomeType")] // to test the compile error, this type doesn't need to exist
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

